--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,13 +2,13 @@
 {
 	margin: 0px;
 	width: 30%;
-	height:30%;
+	height:50%;
 	position:absolute;
 }
 .d
 {
 	padding: 15px 20px 20px 20px;
-	background-color:#FFF8DC;
+	background-color:rgb(252, 252, 238);
 	top: 25%;
 	left: 35%;
 	padding-top: 20px;
