--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,14 +2,9 @@
 {
 	margin: 0px;
 	width: 30%;
-	height:50%;
 	position:absolute;
-}
-.d
-{
-	padding: 15px 20px 20px 20px;
-	background-color:rgb(252, 252, 238);
+	padding: 20px;
+	background-color:#FFF8DC;
 	top: 25%;
 	left: 35%;
-	padding-top: 20px;
 }
